--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -1,5 +1,5 @@
 name: photon ✴ Creation
-version: v0.1.0
+version: 0.1.0
 description: structure, style and logic for creative works - https://schema.org/CreativeWork
 author:
   name: phi ARCHITECT
